--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": ">=0.6"
   },
   "dependencies": {
-    "multiparter": "0.1.*",
-    "mime": "1.2.*"
+    "multiparter": "0.1.4",
+    "mime": "1.2.9"
   }
 }
