--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,10 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
+    tags:
+      - v*
   pull_request:
-    branches: [ master ]
+    branches: [ * ]
 
 jobs:
   build:
