--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,11 +5,13 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
     tags:
       - v*
   pull_request:
-    branches: [ * ]
+    branches:
+      - *
 
 jobs:
   build:
