Prettier config update and added node v17 to github testing action
Signed-off-by: VoidVolker <VoidVolker@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -61,6 +61,14 @@
         "trailingComma": "none",
         "bracketSpacing": true,
         "semi": false,
-        "useTabs": false
+        "useTabs": false,
+        "overrides": [
+            {
+                "files": "*.yml",
+                "options": {
+                    "tabWidth": 2
+                }
+            }
+        ]
     }
 }
