--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "form-data": "^4.0.0"
     },
     "devDependencies": {
+        "dotenv": "^16.3.1",
         "eslint": "^8.2.0",
         "jest": "^27.3.1",
         "prettier": "^2.4.1"
