--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     },
     "dependencies": {
         "axios": "^0.24.0",
-        "form-data": "^4.0.0"
+        "form-data": "^4.0.0",
+        "v8-to-istanbul": "^9.1.0"
     },
     "devDependencies": {
         "dotenv": "^16.3.1",
         "eslint": "^8.2.0",
-        "jest": "^27.3.1",
+        "jest": "^29.6.2",
         "prettier": "^2.4.1"
     },
     "scripts": {
